# mighty-bird

./: .gitignore  Makefile  cross_file.build  main.c  meson.build
BSP/: meson.build
BSP/device/: startup_efr32mg12p.c
buildscripts/: build.sh
linker-script/: EFR32MG12P332F1024GL125_flash.lds
src/: main.c
src/Utils/: delay.c  delay.h
