# BSP

# internal incdirs and srcsfiles
bsp_incdirs = []
bsp_srcs    = []

bsp_incdirs += include_directories('EFR32MG12P/Devices/Include')
bsp_incdirs += include_directories('CMSIS')
bsp_incdirs += include_directories('emlib/inc')

# sources
bsp_srcs += ['device/system_efr32mg12p.c']

bsp_srcs += ['device/system_efr32mg12p.c']
bsp_srcs += ['emlib/src/em_acmp.c']
bsp_srcs += ['emlib/src/em_adc.c']
bsp_srcs += ['emlib/src/em_aes.c']
bsp_srcs += ['emlib/src/em_assert.c']
bsp_srcs += ['emlib/src/em_burtc.c']
bsp_srcs += ['emlib/src/em_can.c']
bsp_srcs += ['emlib/src/em_cmu.c']
bsp_srcs += ['emlib/src/em_core.c']
bsp_srcs += ['emlib/src/em_cryotimer.c']
bsp_srcs += ['emlib/src/em_crypto.c']
bsp_srcs += ['emlib/src/em_csen.c']
bsp_srcs += ['emlib/src/em_dac.c']
bsp_srcs += ['emlib/src/em_dbg.c']
bsp_srcs += ['emlib/src/em_dma.c']
bsp_srcs += ['emlib/src/em_ebi.c']
bsp_srcs += ['emlib/src/em_emu.c']
bsp_srcs += ['emlib/src/em_eusart.c']
bsp_srcs += ['emlib/src/em_gpcrc.c']
bsp_srcs += ['emlib/src/em_gpio.c']
bsp_srcs += ['emlib/src/em_i2c.c']
bsp_srcs += ['emlib/src/em_iadc.c']
bsp_srcs += ['emlib/src/em_idac.c']
bsp_srcs += ['emlib/src/em_int.c']
bsp_srcs += ['emlib/src/em_lcd.c']
bsp_srcs += ['emlib/src/em_ldma.c']
bsp_srcs += ['emlib/src/em_lesense.c']
bsp_srcs += ['emlib/src/em_letimer.c']
bsp_srcs += ['emlib/src/em_leuart.c']
bsp_srcs += ['emlib/src/em_mpu.c']
bsp_srcs += ['emlib/src/em_msc.c']
bsp_srcs += ['emlib/src/em_opamp.c']
bsp_srcs += ['emlib/src/em_pcnt.c']
bsp_srcs += ['emlib/src/em_pdm.c']
bsp_srcs += ['emlib/src/em_prs.c']
bsp_srcs += ['emlib/src/em_qspi.c']
bsp_srcs += ['emlib/src/em_rmu.c']
bsp_srcs += ['emlib/src/em_rtc.c']
bsp_srcs += ['emlib/src/em_rtcc.c']
bsp_srcs += ['emlib/src/em_se.c']
bsp_srcs += ['emlib/src/em_system.c']
bsp_srcs += ['emlib/src/em_timer.c']
bsp_srcs += ['emlib/src/em_usart.c']
bsp_srcs += ['emlib/src/em_vcmp.c']
bsp_srcs += ['emlib/src/em_vdac.c']
bsp_srcs += ['emlib/src/em_wdog.c']
#=============================================================================#

bsp_srcs = files(bsp_srcs)

# use the variables bsp_srcs and bsp_incdirs for the executable
